--- a/app-config-repo/app-service1.properties
+++ b/app-config-repo/app-service1.properties
@@ -1,8 +1,11 @@
-server.port=8083
+server.port=${SERVICE1_SERVICE_PORT:8083}
 spring.application.name=app-service1
 user.role=Developer7
 
+eureka.instance.hostname=${EXPOSED_SERVICE1_HOST:localhost}
+eureka.instance.nonSecurePort=${EXPOSED_SERVICE1_PORT:8083}
+eureka.instance.preferIpAddress=false
 eureka.client.region=default
 eureka.client.registryFetchIntervalSeconds=5
-eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka
+eureka.client.serviceUrl.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8082/eureka}
 eureka.client.instance.preferIpAddress=true
