--- a/app-config-repo/app-service2.properties
+++ b/app-config-repo/app-service2.properties
@@ -1,8 +1,11 @@
-server.port=8084
+server.port=${SERVICE2_SERVICE_PORT:8084}
 spring.application.name=app-service2
 user.role=Developer5
 
+eureka.instance.hostname=${EXPOSED_SERVICE2_HOST:localhost}
+eureka.instance.nonSecurePort=${EXPOSED_SERVICE2_PORT:8084}
+eureka.instance.preferIpAddress=false
 eureka.client.region=default
 eureka.client.registryFetchIntervalSeconds=5
-eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka
+eureka.client.serviceUrl.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8082/eureka}
 eureka.client.instance.preferIpAddress=true
