--- a/app-config/src/main/resources/application.properties
+++ b/app-config/src/main/resources/application.properties
@@ -1,13 +1,16 @@
 # Option Reference : https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 
-server.port=8081
+server.port=${CONFIG_SERVICE_PORT:8081}
 spring.application.name=app-config
 spring.profiles.active=native
-spring.cloud.config.server.native.searchLocations=file:///${user.dir}/../app-config-repo
-spring.security.user.password=admin
+spring.cloud.config.server.native.searchLocations=${CONFIG_SERVICE_REPO_PATH:file:///${user.dir}/../app-config-repo}
+spring.security.user.password=${CONFIG_SERVICE_PASSWORD:admin}
 # spring.cloud.config.server.native.addLabelLocations=false
 
+eureka.instance.hostname=${EXPOSED_CONFIG_HOST:localhost}
+eureka.instance.nonSecurePort=${EXPOSED_CONFIG_PORT:8081}
+eureka.instance.preferIpAddress=false
 eureka.client.region=default
-eureka.client.registryFetchIntervalSeconds=1
-eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka
+eureka.client.registryFetchIntervalSeconds=5
+eureka.client.serviceUrl.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8082/eureka}
 eureka.client.instance.preferIpAddress=true
