--- a/app-config-repo/app-gateway.properties
+++ b/app-config-repo/app-gateway.properties
@@ -1,10 +1,13 @@
-server.port=8080
+server.port=${GATEWAY_SERVICE_PORT:8080}
 spring.application.name=app-gateway
 user.role=Developer5
 
+eureka.instance.hostname=${EXPOSED_GATEWAY_HOST:localhost}
+eureka.instance.nonSecurePort=${EXPOSED_GATEWAY_PORT:8080}
+eureka.instance.preferIpAddress=false
 eureka.client.region=default
 eureka.client.registryFetchIntervalSeconds=5
-eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka
+eureka.client.serviceUrl.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8082/eureka}
 eureka.client.instance.preferIpAddress=true
 eureka.client.registerWithEureka=true
 eureka.client.fetchRegistry=true
@@ -12,13 +15,23 @@ eureka.client.fetchRegistry=true
 zuul.ignoredServices=*
 zuul.prefix=/gateway
 zuul.stripPrefix=true
- 
+
 zuul.routes.app-service1.path=/s1/**
 zuul.routes.app-service1.stripPrefix=true
 zuul.routes.app-service1.sensitive-headers=Set-Cookie,Authorization
-hystrix.command.app-service1.execution.isolation.thread.timeoutInMilliseconds=600000
+hystrix.command.app-service1.execution.isolation.thread.timeoutInMilliseconds=60000
+# hystrix.command.app-service1.execution.timeout.enabled=false
+# app-service1.ribbon.ReadTimeout=100000
+# app-service1.ribbon.SocketTimeout=100000
  
 zuul.routes.app-service2.path=/s2/**
 zuul.routes.app-service2.stripPrefix=true
 zuul.routes.app-service2.sensitive-headers=Set-Cookie,Authorization
-hystrix.command.app-service2.execution.isolation.thread.timeoutInMilliseconds=600000
+hystrix.command.app-service2.execution.isolation.thread.timeoutInMilliseconds=60000
+# hystrix.command.app-service2.execution.timeout.enabled=false
+# app-service2.ribbon.ReadTimeout=100000
+# app-service2.ribbon.SocketTimeout=100000
+
+# Access APIs as below
+# http://localhost:8080/gateway/s1/service1/status1
+# http://localhost:8080/gateway/s2/service2/status2
