--- a/app-discovery/src/main/resources/application.properties
+++ b/app-discovery/src/main/resources/application.properties
@@ -1,4 +1,11 @@
 # Option Reference : https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 
-# Get data from config server
-# http://localhost:8081/app-discovery/development/master
+server.port=${DISCOVERY_SERVICE_PORT:8082}
+spring.application.name=app-discovery
+ 
+eureka.instance.hostname=${DISCOVERY_SERVICE_HOST:localhost}
+eureka.client.serviceUrl.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8082/eureka}
+eureka.client.register-with-eureka=false
+eureka.client.registerWithEureka=false
+eureka.client.fetch-registry=false
+eureka.client.fetchRegistry=false
