--- a/app-gateway/src/main/resources/bootstrap.properties
+++ b/app-gateway/src/main/resources/bootstrap.properties
@@ -3,11 +3,11 @@ spring.cloud.config.name=app-gateway
 
 spring.cloud.config.discovery.service-id=app-config
 spring.cloud.config.discovery.enabled=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8082/eureka
+eureka.client.serviceUrl.defaultZone=${DISCOVERY_SERVICE_URL:http://localhost:8082/eureka}
 # eureka.client.instance.preferIpAddress=true
 
 
 spring.profiles.active=development
 # spring.cloud.config.uri=http://localhost:8081
-spring.cloud.config.username=user
-spring.cloud.config.password=admin
+spring.cloud.config.username=${CONFIG_SERVICE_USERNAME:user}
+spring.cloud.config.password=${CONFIG_SERVICE_PASSWORD:admin}
